# pylicy

./: .gitignore  DEVELOPING.md  LICENSE  Makefile  README.md  mkdocs.yml  netlify.toml  pyproject.toml
.github/workflows/: lint-and-test.yml  publish.yml
docs/: getting-started.md  index.md  policies.md  rules.md
examples/getting_started_example/: main.py  rules.yml
examples/readme_example/: main.py
examples/simple_token_policies/: main.py
pylicy/: __init__.py  models.py  policy.py  pylicy.py  rules.py  utils.py
tests/: test_policy.py  test_pylicy.py  test_pylicy_helpers.py  test_rules.py  test_utils.py
tests/test_examples/: test_getting_started_example.py  test_readme_example.py
tests/test_examples/test_simple_token_policies/: mock_api_tokens.json  rules.yml  test_simple_token_policies.py
